[package]
authors = ["realwangliqiu <realwangliqiu@proton.me>"]
edition = "2024"
name = "redis-demo"
rust-version = "1.85"
version = "0.0.1"
license = "MIT"
readme = "README.md"
#documentation = "https://github.com/realwangliqiu/redis-demo"
repository = "https://github.com/realwangliqiu/redis-demo"
description = """
 redis-demo
"""

[[bin]]
name = "redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redis-server"
path = "src/bin/server_proxy.rs"

[dependencies]
async-stream = "0.3"
atoi = "2.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.28.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.29.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.16.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.28.0", optional = true }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.44", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]
