[workspace]
members = [
    "redis-bin",
    "redis-lib",
]
default-members = ["redis-bin", "redis-lib", ]
exclude = []
resolver = "3"
  
[workspace.package] 
rust-version = "1.85"
version = "0.1.0"
authors = ["realwangliqiu <realwangliqiu@proton.me>"]
edition = "2024"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/realwangliqiu/redis-demo"
homepage = "https://github.com/realwangliqiu/redis-demo" 
publish = ["crates-io", ]

 
[workspace.dependencies]
async-stream = "0.3"
atoi = "2.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }





 




 
