[package]
name = "redis-bin"  
authors = ["realwangliqiu <realwangliqiu@proton.me>"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["redis", "tokio"]
categories = ["development-tools"]
description = """
 redis-demo
"""


[[bin]]
name = "redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redis-server"
path = "src/bin/server_proxy.rs"


[dependencies]
redis-lib = { path = "../redis-lib", version = "0.1.0" }
async-stream = "0.3"
atoi = "2.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio.workspace =  true
tokio-stream = "0.1"
tracing.workspace = true
tracing-subscriber.workspace = true
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.28.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.29.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.16.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.28.0", optional = true }