[package]
name = "redis-bin"  
authors = ["realwangliqiu <realwangliqiu@proton.me>"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["redis", "tokio"]
categories = ["development-tools"]
description = """
 redis-demo
"""


[[bin]]
name = "redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redis-server"
path = "src/bin/server_proxy.rs"


[dependencies]
redis-lib = { path = "../redis-lib", version = "0.1.0" }
async-stream = "0.3"
atoi = "2.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio.workspace =  true
tokio-stream = "0.1"
tracing.workspace = true
tracing-subscriber.workspace = true
console-subscriber = "0.4"
 
opentelemetry = { version = "0.28", optional = true } 
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry-jaeger = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["test-util"] }

[features]
otel = ["opentelemetry", "tracing-opentelemetry", "opentelemetry-jaeger", ]
