[package]
name = "redis-lib"
authors = ["realwangliqiu <realwangliqiu@proton.me>"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["redis", "tokio"]
categories = ["development-tools"]
description = """
 redis-demo
"""


[dependencies]
async-stream = "0.3"
atoi = "2.0"
bytes = "1.10"
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
tracing-subscriber.workspace = true

  
[dev-dependencies]
tokio = { version = "1.44", features = ["test-util"] }


 